# Static-Analysis-Exp

./: CMakeLists.txt  LICENSE  README.md  Tracker.py  input_for_cc.ll  test1.ll
OpcodeCounter/: CMakeLists.txt  OpcodeCounter.cpp  OpcodeCounter.h  input_for_cc.ll
VariableTracker/: CMakeLists.txt  VariableTracker.cpp  VariableTracker.h
include/: Embedding.hpp
ll/: input_for_cc.ll  test0.ll  test1.ll  test2.ll  test3.ll
src/: main.cpp
tests/: test0.c  test1.c  test2.c  test3.c
tools/llvmPass/include/: Defpass.hpp
tools/llvmPass/src/: DefPass.cpp  PassDef.cpp  PassDvars.cpp  PassManager.cpp  UsePass.cpp
